--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/eduarroyo/aprendizaje_socket.io/issues"
   },
-  "homepage": "https://github.com/eduarroyo/aprendizaje_socket.io#readme"
+  "homepage": "https://github.com/eduarroyo/aprendizaje_socket.io#readme",
+  "dependencies": {
+    "express": "^4.13.4"
+  }
 }
